--- a/prod2.css
+++ b/prod2.css
@@ -41,7 +41,7 @@
     <h1>Produtos</h1>
     <ul>
         <li>
-            <img src="https://m.media-amazon.com/images/I/41U7n6-jm2S._AC_SX679_.jpg" alt="produto1">
-            <button onclick="location.href='produto1.html'">Boneu pretin</button>
+           <img src="https://acdn.mitiendanube.com/stores/001/054/338/products/htb1ynenfeysbunjy1zdq6xpxfxap1-29a2e57ef25a1fa47515713597154525-640-0.jpg" alt="produto2">
+            <button onclick="location.href='produto2.html'">Boneu branquin</button>
         </li>
         <li>
